Fixes rounding error when calculating MOVE event

In general, it is good practice to compare floats using an Epsilon.
In particular, a mouse location_f() could differ between the
MOUSE_PRESSED and MOUSE_RELEASED events. At MOUSE_RELEASED, it will have
a targeter() already cached, while at MOUSE_PRESSED, it will have to
calculate it passing through all  windows, and that could generate
rounding error.

This patch fixes, that situation. It could be triggered when one of the
window->layer()->bounds()'s origin is at a value bigger than 9000

BUG=723902
R=reveman@chromium.org

Review-Url: https://codereview.chromium.org/2894503002
Cr-Commit-Position: refs/heads/master@{#474854}