components/exo/pointer.cc
@@ -5,6 +5,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "components/exo/pointer.h"
 
+#include <utility>
+
 #include "ash/public/cpp/shell_window_ids.h"
 #include "cc/output/copy_output_request.h"
 #include "cc/output/copy_output_result.h"
@@ -34,6 +36,7 @@ namespace exo {
 namespace {
 
 const float kLargeCursorScale = 2.8f;
+const double kLocatedEventEpsilonSquared = 1.0 / (2000.0 * 2000.0);
 
 // Synthesized events typically lack floating point precision so to avoid
 // generating mouse event jitter we consider the location of these events
@@ -42,7 +45,15 @@ bool SameLocation(const ui::LocatedEvent* event, const gfx::PointF& location) {
   if (event->flags() & ui::EF_IS_SYNTHESIZED)
     return event->location() == gfx::ToFlooredPoint(location);
 
-  return event->location_f() == location;
+  // In general, it is good practice to compare floats using an epsilon.
+  // In particular, the mouse location_f() could differ between the
+  // MOUSE_PRESSED and MOUSE_RELEASED events. At MOUSE_RELEASED, it will have a
+  // targeter() already cached, while at MOUSE_PRESSED, it will have to
+  // calculate it passing through all the hierarchy of windows, and that could
+  // generate rounding error. std::numeric_limits<float>::epsilon() is not big
+  // enough to catch this rounding error.
+  gfx::Vector2dF offset = event->location_f() - location;
+  return offset.LengthSquared() < (2 * kLocatedEventEpsilonSquared);
 }
 
 }  // namespace
